[package]
name = "retrox"
version = "0.0.0"
edition = "2021"
rust-version = "1.95.0"
authors = ["RetroX Project"]
description = "RNMDL GN-Z11 Parser, Validator and Graphical Renderer"
license = "CC-BY-4.0"

[[bin]]
name = "retrox"
path = "src/main.rs"

[dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
xcb = "=1.7.0"