[package]
name = "retrobrowser"
version = "0.0.0"
edition = "2021"
rust-version = "1.95.0"
authors = ["RetroX Project"]
description = "RetroBrowser — graphical RNMDL browser for the RetroX ecosystem"
license = "CC-BY-4.0"

[[bin]]
name = "retrobrowser"
path = "src/main.rs"

[dependencies]
rnmdl = { path = "../rnmdl" }

[target.'cfg(target_os = "linux")'.dependencies]
wayland-client    = "=0.31.14"
wayland-protocols = { version = "=0.31.2", features = ["client", "staging"] }
libc              = "=0.2.186"

[build-dependencies]
cc = "1"