[package]
name = "retrobrowser"
version = "0.0.0"
edition = "2021"
rust-version = "1.95.0"
authors = ["RetroX Project"]
description = "RetroBrowser — graphical RNMDL browser for the RetroX ecosystem"
license = "CC-BY-4.0"

[[bin]]
name = "retrobrowser"
path = "src/main.rs"

[dependencies]
rnmdl = { path = "../rnmdl" }

# ─────────────────────────────────────────────
# Linux backend (Wayland)
# ─────────────────────────────────────────────
[target.'cfg(target_os = "linux")'.dependencies]
wayland-client    = "=0.31.14"
wayland-protocols = { version = "=0.31.2", features = ["client", "staging"] }
libc              = "=0.2.186"

# ─────────────────────────────────────────────
# Windows backend (Win32 GDI)
# ─────────────────────────────────────────────
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }

# ─────────────────────────────────────────────
# macOS backend (Cocoa / objc2)
# ─────────────────────────────────────────────
[dependencies.objc2]
version = "0.5"

[dependencies.objc2-foundation]
version = "0.2"
features = ["alloc", "NSString", "NSGeometry"]

[dependencies.objc2-app-kit]
version = "0.2"
features = [
    # Base types needed by everything below
    "NSResponder",      # required by NSApplication, NSWindow, NSView
    "NSImageRep",       # required by NSBitmapImageRep
    "NSGraphics",       # NSBackingStoreType, NSGraphicsContext colour-space names

    # Concrete types used in macos.rs
    "NSApplication",
    "NSBitmapImageRep",
    "NSEvent",
    "NSGraphicsContext",
    "NSScreen",
    "NSView",
    "NSWindow",
]

# ─────────────────────────────────────────────
# build tools (shared)
# ─────────────────────────────────────────────
[build-dependencies]
cc = "1"